tests/paczka1/small_fuzzy/47910128.err
Error in line 2: S158 S31* 71,3
Error in line 12: TZDZj064CN S126 65,9
